<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:minHeight="55dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/more_icon"
        style="@style/Widget.Material3.MaterialTimePicker.ImageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/more_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="?android:attr/actionModeFindDrawable" />

    <LinearLayout android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginEnd="15dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/more_icon">

        <Button
            style="@style/transparent_button_gray"
            android:layout_width="0dp"
            android:textColor="@color/dark_gray"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/message"/>

        <Button
            style="@style/transparent_button_gray"
            android:layout_width="0dp"
            android:textColor="@color/dark_gray"
            android:layout_weight="1"
            android:layout_marginStart="5dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_profile"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>