<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/kings_cross_image" />

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:foreground="@android:drawable/screen_background_dark_transparent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/app_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/companion_app"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/horizontal_middle_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="15dp"/>


        <ImageView
            android:id="@+id/underground_logo"
            android:layout_width="200dp"
            android:layout_height="0dp"
            android:minHeight="100dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/underground_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/app_text"/>



        <TextView
            android:id="@+id/bottom_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/bottom_text"
            android:textColor="@color/white"
            android:textSize="11sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/sign_in_btn_google"
            app:layout_constraintStart_toStartOf="@id/sign_in_btn_facebook" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/middle_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/horizontal_middle_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <Button
            android:id="@+id/sign_in_btn_facebook"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="0dp"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginStart="45dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="15dp"
            android:text="@string/sign_in_facebook"
            android:textAllCaps="true"
            android:textColor="@color/facebook_blue"
            android:textSize="11sp"
            android:textStyle="bold"
            app:icon="@drawable/fb_logo"
            app:iconTint="@android:color/transparent"
            app:iconTintMode="add"
            app:layout_constraintBottom_toTopOf="@id/bottom_text"
            app:layout_constraintEnd_toStartOf="@id/middle_guideline"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/sign_in_btn_google"
            style="@style/Widget.Material3.Button.ElevatedButton.Icon"
            android:layout_width="0dp"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="45dp"
            android:layout_marginBottom="15dp"
            android:text="@string/sign_in_google"
            android:textAllCaps="true"
            android:textColor="@android:color/darker_gray"
            android:textSize="11sp"
            android:textStyle="bold"
            app:icon="@drawable/g_logo"
            app:iconTint="@android:color/transparent"
            app:iconTintMode="add"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/middle_guideline"
            app:layout_constraintTop_toTopOf="@id/sign_in_btn_facebook" />

        <Button
            android:id="@+id/login_btn_email"
            style="@style/transparent_button"
            android:layout_width="0dp"
            android:layout_height="@dimen/login_button_height"
            android:layout_marginBottom="15dp"
            android:text="@string/sign_in_with_email"
            android:textAllCaps="true"
            app:layout_constraintBottom_toTopOf="@id/sign_in_btn_facebook"
            app:layout_constraintEnd_toEndOf="@id/sign_in_btn_google"
            app:layout_constraintStart_toStartOf="@id/sign_in_btn_facebook" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>